Fix team member alignment

--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -8,7 +8,14 @@
 
 .items {
     display: flex;
-    gap: 12px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.wrapped {
+    text-align: center;
+    justify-content: center;
+    max-width:100px;
 }
 
 .circle-mask {
@@ -16,16 +23,6 @@
     height: 100px;
     overflow: hidden;
     border-radius: 50%;
-}
-
-.circle-mask img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.centered {
-    text-align: center;
 }
 
 // Override theme's styles
